Archive2/ce/c863913d40e071/output
main.cpp: In function 'int main()':
main.cpp:43:27: error: 'B<short int>::func_ptr_type' has not been declared
    std::cout << B<short>::func_ptr_type::value() << std::endl;
                           ^
main.cpp:45:17: error: 'funptr' is not a member of 'B<short int>'
    std::cout << B<short>::funptr() << std::endl;
                 ^
